Fri May 23 18:12:24 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/syntax.rb : Correct to run on ruby 2.1.2p95 without
	  warnings.

Fri May 23 18:02:39 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/interp.rb : Add unused global variable elimination to
	  reduce memory usage.
	* lib/adlint/cc1/syntax.rb : Ditto.
	* spec/adlint/cc1/ctrlexpr_spec.rb : Ditto.

	* lib/adlint/cc1/type.rb : Support adaptive size limiter of the actual
	  array object.

	* features/code_check/W1031.feature : Fix typo.

Thu May 22 15:53:19 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* release.rc : 3.2.15
	  - Add checkpoints to ease preprocessing error investigation.
	  - Revise object allocation behavior of a large array in order not to
	    exhaust memory.

Thu May 22 11:52:20 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/interp.rb : Fix initializer-list evaluation of an
	  array variable definition in order to examine all expressions in the
	  list even if the actual array size is limited to avoid memory
	  exhausting.

Wed May 21 17:43:04 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/type.rb : Fix Array#impl_length in order to limit
	  size of the actual array object correctly.

Wed May 14 16:50:30 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cpp/eval.rb : Add checkpoints to ease preprocessing error
	  investigation.

Sat May 10 22:31:55 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* release.ga : 3.2.14
	  - Support function-like macro replacement with variable arguments.

Sat May 10 22:07:09 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cpp/macro.rb : Revise behavior of function-like macro
	  replacement in order to enforce the replacement even if the number of
	  arguments is less than the number of parameters.
	* features/code_check/W0830.feature : Ditto.

Sat May 10 13:58:35 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>
